# semaphoreui-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: checks.yml  pre-release.yml  release.yml
semaphoreui_client/: __about__.py  __init__.py  client.py
